# tiny-trons

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: main.py  tokenizer.py
src/data/: utils.py
src/lm/: bigram.py  train.py  utils.py
tests/: conftest.py  test_split.py  test_tokenize.py
